[package]
name = "plotnik-langs"
version = "0.1.1"
edition = "2024"
license = "Apache-2.0"
description = "Tree-sitter language bindings for Plotnik query language"
repository = "https://github.com/plotnik-lang/plotnik"
documentation = "https://docs.rs/plotnik-langs"
keywords = ["tree-sitter", "parser", "languages"]
categories = ["parsing", "development-tools"]
readme = "../../README.md"

[features]
default = [
    "lang-bash",
    "lang-c",
    "lang-cpp",
    "lang-css",
    "lang-go",
    "lang-html",
    "lang-java",
    "lang-javascript",
    "lang-json",
    "lang-python",
    "lang-rust",
    "lang-toml",
    "lang-tsx",
    "lang-typescript",
    "lang-yaml",
]

# All languages
all-languages = [
    "lang-ada",
    "lang-agda",
    "lang-asciidoc",
    "lang-asm",
    "lang-awk",
    "lang-bash",
    "lang-batch",
    "lang-c",
    "lang-c-sharp",
    "lang-caddy",
    "lang-capnp",
    "lang-clojure",
    "lang-cmake",
    "lang-commonlisp",
    "lang-cpp",
    "lang-css",
    "lang-d",
    "lang-dart",
    "lang-devicetree",
    "lang-diff",
    "lang-dockerfile",
    "lang-dot",
    "lang-elisp",
    "lang-elixir",
    "lang-elm",
    "lang-erlang",
    "lang-fish",
    "lang-fsharp",
    "lang-gleam",
    "lang-glsl",
    "lang-go",
    "lang-graphql",
    "lang-haskell",
    "lang-hcl",
    "lang-hlsl",
    "lang-html",
    "lang-idris",
    "lang-ini",
    "lang-java",
    "lang-javascript",
    "lang-jinja2",
    "lang-jq",
    "lang-json",
    "lang-julia",
    "lang-kdl",
    "lang-kotlin",
    "lang-lean",
    "lang-lua",
    "lang-markdown",
    "lang-matlab",
    "lang-meson",
    "lang-nginx",
    "lang-ninja",
    "lang-nix",
    "lang-objc",
    "lang-ocaml",
    "lang-perl",
    "lang-php",
    "lang-postscript",
    "lang-powershell",
    "lang-prolog",
    "lang-python",
    "lang-query",
    "lang-r",
    "lang-rescript",
    "lang-ron",
    "lang-ruby",
    "lang-rust",
    "lang-scala",
    "lang-scheme",
    "lang-scss",
    "lang-sparql",
    "lang-sql",
    "lang-ssh-config",
    "lang-starlark",
    "lang-svelte",
    "lang-swift",
    "lang-textproto",
    "lang-thrift",
    "lang-tlaplus",
    "lang-toml",
    "lang-tsx",
    "lang-typescript",
    "lang-typst",
    "lang-uiua",
    "lang-vb",
    "lang-verilog",
    "lang-vhdl",
    "lang-vim",
    "lang-vue",
    "lang-x86asm",
    "lang-xml",
    "lang-yaml",
    "lang-yuri",
    "lang-zig",
    "lang-zsh",
]

# Individual language features
lang-ada = ["dep:arborium-ada", "plotnik-macros/lang-ada"]
lang-agda = ["dep:arborium-agda", "plotnik-macros/lang-agda"]
lang-asciidoc = ["dep:arborium-asciidoc", "plotnik-macros/lang-asciidoc"]
lang-asm = ["dep:arborium-asm", "plotnik-macros/lang-asm"]
lang-awk = ["dep:arborium-awk", "plotnik-macros/lang-awk"]
lang-bash = ["dep:arborium-bash", "plotnik-macros/lang-bash"]
lang-batch = ["dep:arborium-batch", "plotnik-macros/lang-batch"]
lang-c = ["dep:arborium-c", "plotnik-macros/lang-c"]
lang-c-sharp = ["dep:arborium-c-sharp", "plotnik-macros/lang-c-sharp"]
lang-caddy = ["dep:arborium-caddy", "plotnik-macros/lang-caddy"]
lang-capnp = ["dep:arborium-capnp", "plotnik-macros/lang-capnp"]
lang-clojure = ["dep:arborium-clojure", "plotnik-macros/lang-clojure"]
lang-cmake = ["dep:arborium-cmake", "plotnik-macros/lang-cmake"]
lang-commonlisp = ["dep:arborium-commonlisp", "plotnik-macros/lang-commonlisp"]
lang-cpp = ["dep:arborium-cpp", "plotnik-macros/lang-cpp"]
lang-css = ["dep:arborium-css", "plotnik-macros/lang-css"]
lang-d = ["dep:arborium-d", "plotnik-macros/lang-d"]
lang-dart = ["dep:arborium-dart", "plotnik-macros/lang-dart"]
lang-devicetree = ["dep:arborium-devicetree", "plotnik-macros/lang-devicetree"]
lang-diff = ["dep:arborium-diff", "plotnik-macros/lang-diff"]
lang-dockerfile = ["dep:arborium-dockerfile", "plotnik-macros/lang-dockerfile"]
lang-dot = ["dep:arborium-dot", "plotnik-macros/lang-dot"]
lang-elisp = ["dep:arborium-elisp", "plotnik-macros/lang-elisp"]
lang-elixir = ["dep:arborium-elixir", "plotnik-macros/lang-elixir"]
lang-elm = ["dep:arborium-elm", "plotnik-macros/lang-elm"]
lang-erlang = ["dep:arborium-erlang", "plotnik-macros/lang-erlang"]
lang-fish = ["dep:arborium-fish", "plotnik-macros/lang-fish"]
lang-fsharp = ["dep:arborium-fsharp", "plotnik-macros/lang-fsharp"]
lang-gleam = ["dep:arborium-gleam", "plotnik-macros/lang-gleam"]
lang-glsl = ["dep:arborium-glsl", "plotnik-macros/lang-glsl"]
lang-go = ["dep:arborium-go", "plotnik-macros/lang-go"]
lang-graphql = ["dep:arborium-graphql", "plotnik-macros/lang-graphql"]
lang-haskell = ["dep:arborium-haskell", "plotnik-macros/lang-haskell"]
lang-hcl = ["dep:arborium-hcl", "plotnik-macros/lang-hcl"]
lang-hlsl = ["dep:arborium-hlsl", "plotnik-macros/lang-hlsl"]
lang-html = ["dep:arborium-html", "plotnik-macros/lang-html"]
lang-idris = ["dep:arborium-idris", "plotnik-macros/lang-idris"]
lang-ini = ["dep:arborium-ini", "plotnik-macros/lang-ini"]
lang-java = ["dep:arborium-java", "plotnik-macros/lang-java"]
lang-javascript = ["dep:arborium-javascript", "plotnik-macros/lang-javascript"]
lang-jinja2 = ["dep:arborium-jinja2", "plotnik-macros/lang-jinja2"]
lang-jq = ["dep:arborium-jq", "plotnik-macros/lang-jq"]
lang-json = ["dep:arborium-json", "plotnik-macros/lang-json"]
lang-julia = ["dep:arborium-julia", "plotnik-macros/lang-julia"]
lang-kdl = ["dep:arborium-kdl", "plotnik-macros/lang-kdl"]
lang-kotlin = ["dep:arborium-kotlin", "plotnik-macros/lang-kotlin"]
lang-lean = ["dep:arborium-lean", "plotnik-macros/lang-lean"]
lang-lua = ["dep:arborium-lua", "plotnik-macros/lang-lua"]
lang-markdown = ["dep:arborium-markdown", "plotnik-macros/lang-markdown"]
lang-matlab = ["dep:arborium-matlab", "plotnik-macros/lang-matlab"]
lang-meson = ["dep:arborium-meson", "plotnik-macros/lang-meson"]
lang-nginx = ["dep:arborium-nginx", "plotnik-macros/lang-nginx"]
lang-ninja = ["dep:arborium-ninja", "plotnik-macros/lang-ninja"]
lang-nix = ["dep:arborium-nix", "plotnik-macros/lang-nix"]
lang-objc = ["dep:arborium-objc", "plotnik-macros/lang-objc"]
lang-ocaml = ["dep:arborium-ocaml", "plotnik-macros/lang-ocaml"]
lang-perl = ["dep:arborium-perl", "plotnik-macros/lang-perl"]
lang-php = ["dep:arborium-php", "plotnik-macros/lang-php"]
lang-postscript = ["dep:arborium-postscript", "plotnik-macros/lang-postscript"]
lang-powershell = ["dep:arborium-powershell", "plotnik-macros/lang-powershell"]
lang-prolog = ["dep:arborium-prolog", "plotnik-macros/lang-prolog"]
lang-python = ["dep:arborium-python", "plotnik-macros/lang-python"]
lang-query = ["dep:arborium-query", "plotnik-macros/lang-query"]
lang-r = ["dep:arborium-r", "plotnik-macros/lang-r"]
lang-rescript = ["dep:arborium-rescript", "plotnik-macros/lang-rescript"]
lang-ron = ["dep:arborium-ron", "plotnik-macros/lang-ron"]
lang-ruby = ["dep:arborium-ruby", "plotnik-macros/lang-ruby"]
lang-rust = ["dep:arborium-rust", "plotnik-macros/lang-rust"]
lang-scala = ["dep:arborium-scala", "plotnik-macros/lang-scala"]
lang-scheme = ["dep:arborium-scheme", "plotnik-macros/lang-scheme"]
lang-scss = ["dep:arborium-scss", "plotnik-macros/lang-scss"]
lang-sparql = ["dep:arborium-sparql", "plotnik-macros/lang-sparql"]
lang-sql = ["dep:arborium-sql", "plotnik-macros/lang-sql"]
lang-ssh-config = ["dep:arborium-ssh-config", "plotnik-macros/lang-ssh-config"]
lang-starlark = ["dep:arborium-starlark", "plotnik-macros/lang-starlark"]
lang-svelte = ["dep:arborium-svelte", "plotnik-macros/lang-svelte"]
lang-swift = ["dep:arborium-swift", "plotnik-macros/lang-swift"]
lang-textproto = ["dep:arborium-textproto", "plotnik-macros/lang-textproto"]
lang-thrift = ["dep:arborium-thrift", "plotnik-macros/lang-thrift"]
lang-tlaplus = ["dep:arborium-tlaplus", "plotnik-macros/lang-tlaplus"]
lang-toml = ["dep:arborium-toml", "plotnik-macros/lang-toml"]
lang-tsx = ["dep:arborium-tsx", "plotnik-macros/lang-tsx"]
lang-typescript = ["dep:arborium-typescript", "plotnik-macros/lang-typescript"]
lang-typst = ["dep:arborium-typst", "plotnik-macros/lang-typst"]
lang-uiua = ["dep:arborium-uiua", "plotnik-macros/lang-uiua"]
lang-vb = ["dep:arborium-vb", "plotnik-macros/lang-vb"]
lang-verilog = ["dep:arborium-verilog", "plotnik-macros/lang-verilog"]
lang-vhdl = ["dep:arborium-vhdl", "plotnik-macros/lang-vhdl"]
lang-vim = ["dep:arborium-vim", "plotnik-macros/lang-vim"]
lang-vue = ["dep:arborium-vue", "plotnik-macros/lang-vue"]
lang-x86asm = ["dep:arborium-x86asm", "plotnik-macros/lang-x86asm"]
lang-xml = ["dep:arborium-xml", "plotnik-macros/lang-xml"]
lang-yaml = ["dep:arborium-yaml", "plotnik-macros/lang-yaml"]
lang-yuri = ["dep:arborium-yuri", "plotnik-macros/lang-yuri"]
lang-zig = ["dep:arborium-zig", "plotnik-macros/lang-zig"]
lang-zsh = ["dep:arborium-zsh", "plotnik-macros/lang-zsh"]

[dependencies]
paste = "1.0"
plotnik-core = { version = "0.1.0", path = "../plotnik-core" }
plotnik-macros = { version = "0.1.0", path = "../plotnik-macros" }
arborium-tree-sitter = "2.3.2"
arborium-ada = { version = "2.3.2", optional = true }
arborium-agda = { version = "2.3.2", optional = true }
arborium-asciidoc = { version = "2.3.2", optional = true }
arborium-asm = { version = "2.3.2", optional = true }
arborium-awk = { version = "2.3.2", optional = true }
arborium-bash = { version = "2.3.2", optional = true }
arborium-batch = { version = "2.3.2", optional = true }
arborium-c = { version = "2.3.2", optional = true }
arborium-c-sharp = { version = "2.3.2", optional = true }
arborium-caddy = { version = "2.3.2", optional = true }
arborium-capnp = { version = "2.3.2", optional = true }
arborium-clojure = { version = "2.3.2", optional = true }
arborium-cmake = { version = "2.3.2", optional = true }
arborium-commonlisp = { version = "2.3.2", optional = true }
arborium-cpp = { version = "2.3.2", optional = true }
arborium-css = { version = "2.3.2", optional = true }
arborium-d = { version = "2.3.2", optional = true }
arborium-dart = { version = "2.3.2", optional = true }
arborium-devicetree = { version = "2.3.2", optional = true }
arborium-diff = { version = "2.3.2", optional = true }
arborium-dockerfile = { version = "2.3.2", optional = true }
arborium-dot = { version = "2.3.2", optional = true }
arborium-elisp = { version = "2.3.2", optional = true }
arborium-elixir = { version = "2.3.2", optional = true }
arborium-elm = { version = "2.3.2", optional = true }
arborium-erlang = { version = "2.3.2", optional = true }
arborium-fish = { version = "2.3.2", optional = true }
arborium-fsharp = { version = "2.3.2", optional = true }
arborium-gleam = { version = "2.3.2", optional = true }
arborium-glsl = { version = "2.3.2", optional = true }
arborium-go = { version = "2.3.2", optional = true }
arborium-graphql = { version = "2.3.2", optional = true }
arborium-haskell = { version = "2.3.2", optional = true }
arborium-hcl = { version = "2.3.2", optional = true }
arborium-hlsl = { version = "2.3.2", optional = true }
arborium-html = { version = "2.3.2", optional = true }
arborium-idris = { version = "2.3.2", optional = true }
arborium-ini = { version = "2.3.2", optional = true }
arborium-java = { version = "2.3.2", optional = true }
arborium-javascript = { version = "2.3.2", optional = true }
arborium-jinja2 = { version = "2.3.2", optional = true }
arborium-jq = { version = "2.3.2", optional = true }
arborium-json = { version = "2.3.2", optional = true }
arborium-julia = { version = "2.3.2", optional = true }
arborium-kdl = { version = "2.3.2", optional = true }
arborium-kotlin = { version = "2.3.2", optional = true }
arborium-lean = { version = "2.3.2", optional = true }
arborium-lua = { version = "2.3.2", optional = true }
arborium-markdown = { version = "2.3.2", optional = true }
arborium-matlab = { version = "2.3.2", optional = true }
arborium-meson = { version = "2.3.2", optional = true }
arborium-nginx = { version = "2.3.2", optional = true }
arborium-ninja = { version = "2.3.2", optional = true }
arborium-nix = { version = "2.3.2", optional = true }
arborium-objc = { version = "2.3.2", optional = true }
arborium-ocaml = { version = "2.3.2", optional = true }
arborium-perl = { version = "2.3.2", optional = true }
arborium-php = { version = "2.3.2", optional = true }
arborium-postscript = { version = "2.3.2", optional = true }
arborium-powershell = { version = "2.3.2", optional = true }
arborium-prolog = { version = "2.3.2", optional = true }
arborium-python = { version = "2.3.2", optional = true }
arborium-query = { version = "2.3.2", optional = true }
arborium-r = { version = "2.3.2", optional = true }
arborium-rescript = { version = "2.3.2", optional = true }
arborium-ron = { version = "2.3.2", optional = true }
arborium-ruby = { version = "2.3.2", optional = true }
arborium-rust = { version = "2.3.2", optional = true }
arborium-scala = { version = "2.3.2", optional = true }
arborium-scheme = { version = "2.3.2", optional = true }
arborium-scss = { version = "2.3.2", optional = true }
arborium-sparql = { version = "2.3.2", optional = true }
arborium-sql = { version = "2.3.2", optional = true }
arborium-ssh-config = { version = "2.3.2", optional = true }
arborium-starlark = { version = "2.3.2", optional = true }
arborium-svelte = { version = "2.3.2", optional = true }
arborium-swift = { version = "2.3.2", optional = true }
arborium-textproto = { version = "2.3.2", optional = true }
arborium-thrift = { version = "2.3.2", optional = true }
arborium-tlaplus = { version = "2.3.2", optional = true }
arborium-toml = { version = "2.3.2", optional = true }
arborium-tsx = { version = "2.3.2", optional = true }
arborium-typescript = { version = "2.3.2", optional = true }
arborium-typst = { version = "2.3.2", optional = true }
arborium-uiua = { version = "2.3.2", optional = true }
arborium-vb = { version = "2.3.2", optional = true }
arborium-verilog = { version = "2.3.2", optional = true }
arborium-vhdl = { version = "2.3.2", optional = true }
arborium-vim = { version = "2.3.2", optional = true }
arborium-vue = { version = "2.3.2", optional = true }
arborium-x86asm = { version = "2.3.2", optional = true }
arborium-xml = { version = "2.3.2", optional = true }
arborium-yaml = { version = "2.3.2", optional = true }
arborium-yuri = { version = "2.3.2", optional = true }
arborium-zig = { version = "2.3.2", optional = true }
arborium-zsh = { version = "2.3.2", optional = true }

[build-dependencies]
cargo_metadata = "0.23"

[dev-dependencies]