[package]
name = "plotnik-langs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Tree-sitter language bindings for Plotnik query language"
documentation = "https://docs.rs/plotnik-langs"
keywords = ["tree-sitter", "parser", "languages"]
categories = ["parsing", "development-tools"]
readme = "../../README.md"

[features]
default = [
    "lang-bash",
    "lang-c",
    "lang-cpp",
    "lang-css",
    "lang-go",
    "lang-html",
    "lang-java",
    "lang-javascript",
    "lang-json",
    "lang-python",
    "lang-rust",
    "lang-toml",
    "lang-tsx",
    "lang-typescript",
    "lang-yaml",
]

# All languages
all-languages = [
# @generated:all-languages:begin
    "lang-ada",
    "lang-agda",
    "lang-asciidoc",
    "lang-asm",
    "lang-awk",
    "lang-bash",
    "lang-batch",
    "lang-c",
    "lang-c-sharp",
    "lang-caddy",
    "lang-capnp",
    "lang-cedar",
    "lang-cedarschema",
    "lang-clojure",
    "lang-cmake",
    "lang-cobol",
    "lang-commonlisp",
    "lang-cpp",
    "lang-css",
    "lang-d",
    "lang-dart",
    "lang-devicetree",
    "lang-diff",
    "lang-dockerfile",
    "lang-dot",
    "lang-elisp",
    "lang-elixir",
    "lang-elm",
    "lang-erlang",
    "lang-fish",
    "lang-fsharp",
    "lang-gleam",
    "lang-glsl",
    "lang-go",
    "lang-graphql",
    "lang-groovy",
    "lang-haskell",
    "lang-hcl",
    "lang-hlsl",
    "lang-html",
    "lang-idris",
    "lang-ini",
    "lang-java",
    "lang-javascript",
    "lang-jinja2",
    "lang-jq",
    "lang-json",
    "lang-julia",
    "lang-kotlin",
    "lang-lean",
    "lang-lua",
    "lang-markdown",
    "lang-matlab",
    "lang-meson",
    "lang-nginx",
    "lang-ninja",
    "lang-nix",
    "lang-objc",
    "lang-ocaml",
    "lang-perl",
    "lang-php",
    "lang-postscript",
    "lang-powershell",
    "lang-prolog",
    "lang-python",
    "lang-query",
    "lang-r",
    "lang-rescript",
    "lang-ron",
    "lang-ruby",
    "lang-rust",
    "lang-scala",
    "lang-scheme",
    "lang-scss",
    "lang-solidity",
    "lang-sparql",
    "lang-sql",
    "lang-ssh-config",
    "lang-starlark",
    "lang-styx",
    "lang-svelte",
    "lang-swift",
    "lang-textproto",
    "lang-thrift",
    "lang-tlaplus",
    "lang-toml",
    "lang-tsx",
    "lang-typescript",
    "lang-typst",
    "lang-uiua",
    "lang-vb",
    "lang-verilog",
    "lang-vhdl",
    "lang-vim",
    "lang-vue",
    "lang-wit",
    "lang-x86asm",
    "lang-xml",
    "lang-yaml",
    "lang-yuri",
    "lang-zig",
    "lang-zsh",
# @generated:all-languages:end
]

# Individual language features
# @generated:lang-features:begin
lang-ada = ["dep:arborium-ada"]
lang-agda = ["dep:arborium-agda"]
lang-asciidoc = ["dep:arborium-asciidoc"]
lang-asm = ["dep:arborium-asm"]
lang-awk = ["dep:arborium-awk"]
lang-bash = ["dep:arborium-bash"]
lang-batch = ["dep:arborium-batch"]
lang-c = ["dep:arborium-c"]
lang-c-sharp = ["dep:arborium-c-sharp"]
lang-caddy = ["dep:arborium-caddy"]
lang-capnp = ["dep:arborium-capnp"]
lang-cedar = ["dep:arborium-cedar"]
lang-cedarschema = ["dep:arborium-cedarschema"]
lang-clojure = ["dep:arborium-clojure"]
lang-cmake = ["dep:arborium-cmake"]
lang-cobol = ["dep:arborium-cobol"]
lang-commonlisp = ["dep:arborium-commonlisp"]
lang-cpp = ["dep:arborium-cpp"]
lang-css = ["dep:arborium-css"]
lang-d = ["dep:arborium-d"]
lang-dart = ["dep:arborium-dart"]
lang-devicetree = ["dep:arborium-devicetree"]
lang-diff = ["dep:arborium-diff"]
lang-dockerfile = ["dep:arborium-dockerfile"]
lang-dot = ["dep:arborium-dot"]
lang-elisp = ["dep:arborium-elisp"]
lang-elixir = ["dep:arborium-elixir"]
lang-elm = ["dep:arborium-elm"]
lang-erlang = ["dep:arborium-erlang"]
lang-fish = ["dep:arborium-fish"]
lang-fsharp = ["dep:arborium-fsharp"]
lang-gleam = ["dep:arborium-gleam"]
lang-glsl = ["dep:arborium-glsl"]
lang-go = ["dep:arborium-go"]
lang-graphql = ["dep:arborium-graphql"]
lang-groovy = ["dep:arborium-groovy"]
lang-haskell = ["dep:arborium-haskell"]
lang-hcl = ["dep:arborium-hcl"]
lang-hlsl = ["dep:arborium-hlsl"]
lang-html = ["dep:arborium-html"]
lang-idris = ["dep:arborium-idris"]
lang-ini = ["dep:arborium-ini"]
lang-java = ["dep:arborium-java"]
lang-javascript = ["dep:arborium-javascript"]
lang-jinja2 = ["dep:arborium-jinja2"]
lang-jq = ["dep:arborium-jq"]
lang-json = ["dep:arborium-json"]
lang-julia = ["dep:arborium-julia"]
lang-kotlin = ["dep:arborium-kotlin"]
lang-lean = ["dep:arborium-lean"]
lang-lua = ["dep:arborium-lua"]
lang-markdown = ["dep:arborium-markdown"]
lang-matlab = ["dep:arborium-matlab"]
lang-meson = ["dep:arborium-meson"]
lang-nginx = ["dep:arborium-nginx"]
lang-ninja = ["dep:arborium-ninja"]
lang-nix = ["dep:arborium-nix"]
lang-objc = ["dep:arborium-objc"]
lang-ocaml = ["dep:arborium-ocaml"]
lang-perl = ["dep:arborium-perl"]
lang-php = ["dep:arborium-php"]
lang-postscript = ["dep:arborium-postscript"]
lang-powershell = ["dep:arborium-powershell"]
lang-prolog = ["dep:arborium-prolog"]
lang-python = ["dep:arborium-python"]
lang-query = ["dep:arborium-query"]
lang-r = ["dep:arborium-r"]
lang-rescript = ["dep:arborium-rescript"]
lang-ron = ["dep:arborium-ron"]
lang-ruby = ["dep:arborium-ruby"]
lang-rust = ["dep:arborium-rust"]
lang-scala = ["dep:arborium-scala"]
lang-scheme = ["dep:arborium-scheme"]
lang-scss = ["dep:arborium-scss"]
lang-solidity = ["dep:arborium-solidity"]
lang-sparql = ["dep:arborium-sparql"]
lang-sql = ["dep:arborium-sql"]
lang-ssh-config = ["dep:arborium-ssh-config"]
lang-starlark = ["dep:arborium-starlark"]
lang-styx = ["dep:arborium-styx"]
lang-svelte = ["dep:arborium-svelte"]
lang-swift = ["dep:arborium-swift"]
lang-textproto = ["dep:arborium-textproto"]
lang-thrift = ["dep:arborium-thrift"]
lang-tlaplus = ["dep:arborium-tlaplus"]
lang-toml = ["dep:arborium-toml"]
lang-tsx = ["dep:arborium-tsx"]
lang-typescript = ["dep:arborium-typescript"]
lang-typst = ["dep:arborium-typst"]
lang-uiua = ["dep:arborium-uiua"]
lang-vb = ["dep:arborium-vb"]
lang-verilog = ["dep:arborium-verilog"]
lang-vhdl = ["dep:arborium-vhdl"]
lang-vim = ["dep:arborium-vim"]
lang-vue = ["dep:arborium-vue"]
lang-wit = ["dep:arborium-wit"]
lang-x86asm = ["dep:arborium-x86asm"]
lang-xml = ["dep:arborium-xml"]
lang-yaml = ["dep:arborium-yaml"]
lang-yuri = ["dep:arborium-yuri"]
lang-zig = ["dep:arborium-zig"]
lang-zsh = ["dep:arborium-zsh"]
# @generated:lang-features:end

[dependencies]
paste = "1.0"
plotnik-core.workspace = true
postcard = { version = "1", features = ["alloc"] }
arborium-tree-sitter = "2.12.4"
# @generated:lang-deps:begin
arborium-ada = { version = "2.12.4", optional = true }
arborium-agda = { version = "2.12.4", optional = true }
arborium-asciidoc = { version = "2.12.4", optional = true }
arborium-asm = { version = "2.12.4", optional = true }
arborium-awk = { version = "2.12.4", optional = true }
arborium-bash = { version = "2.12.4", optional = true }
arborium-batch = { version = "2.12.4", optional = true }
arborium-c = { version = "2.12.4", optional = true }
arborium-c-sharp = { version = "2.12.4", optional = true }
arborium-caddy = { version = "2.12.4", optional = true }
arborium-capnp = { version = "2.12.4", optional = true }
arborium-cedar = { version = "2.12.4", optional = true }
arborium-cedarschema = { version = "2.12.4", optional = true }
arborium-clojure = { version = "2.12.4", optional = true }
arborium-cmake = { version = "2.12.4", optional = true }
arborium-cobol = { version = "2.12.4", optional = true }
arborium-commonlisp = { version = "2.12.4", optional = true }
arborium-cpp = { version = "2.12.4", optional = true }
arborium-css = { version = "2.12.4", optional = true }
arborium-d = { version = "2.12.4", optional = true }
arborium-dart = { version = "2.12.4", optional = true }
arborium-devicetree = { version = "2.12.4", optional = true }
arborium-diff = { version = "2.12.4", optional = true }
arborium-dockerfile = { version = "2.12.4", optional = true }
arborium-dot = { version = "2.12.4", optional = true }
arborium-elisp = { version = "2.12.4", optional = true }
arborium-elixir = { version = "2.12.4", optional = true }
arborium-elm = { version = "2.12.4", optional = true }
arborium-erlang = { version = "2.12.4", optional = true }
arborium-fish = { version = "2.12.4", optional = true }
arborium-fsharp = { version = "2.12.4", optional = true }
arborium-gleam = { version = "2.12.4", optional = true }
arborium-glsl = { version = "2.12.4", optional = true }
arborium-go = { version = "2.12.4", optional = true }
arborium-graphql = { version = "2.12.4", optional = true }
arborium-groovy = { version = "2.12.4", optional = true }
arborium-haskell = { version = "2.12.4", optional = true }
arborium-hcl = { version = "2.12.4", optional = true }
arborium-hlsl = { version = "2.12.4", optional = true }
arborium-html = { version = "2.12.4", optional = true }
arborium-idris = { version = "2.12.4", optional = true }
arborium-ini = { version = "2.12.4", optional = true }
arborium-java = { version = "2.12.4", optional = true }
arborium-javascript = { version = "2.12.4", optional = true }
arborium-jinja2 = { version = "2.12.4", optional = true }
arborium-jq = { version = "2.12.4", optional = true }
arborium-json = { version = "2.12.4", optional = true }
arborium-julia = { version = "2.12.4", optional = true }
arborium-kotlin = { version = "2.12.4", optional = true }
arborium-lean = { version = "2.12.4", optional = true }
arborium-lua = { version = "2.12.4", optional = true }
arborium-markdown = { version = "2.12.4", optional = true }
arborium-matlab = { version = "2.12.4", optional = true }
arborium-meson = { version = "2.12.4", optional = true }
arborium-nginx = { version = "2.12.4", optional = true }
arborium-ninja = { version = "2.12.4", optional = true }
arborium-nix = { version = "2.12.4", optional = true }
arborium-objc = { version = "2.12.4", optional = true }
arborium-ocaml = { version = "2.12.4", optional = true }
arborium-perl = { version = "2.12.4", optional = true }
arborium-php = { version = "2.12.4", optional = true }
arborium-postscript = { version = "2.12.4", optional = true }
arborium-powershell = { version = "2.12.4", optional = true }
arborium-prolog = { version = "2.12.4", optional = true }
arborium-python = { version = "2.12.4", optional = true }
arborium-query = { version = "2.12.4", optional = true }
arborium-r = { version = "2.12.4", optional = true }
arborium-rescript = { version = "2.12.4", optional = true }
arborium-ron = { version = "2.12.4", optional = true }
arborium-ruby = { version = "2.12.4", optional = true }
arborium-rust = { version = "2.12.4", optional = true }
arborium-scala = { version = "2.12.4", optional = true }
arborium-scheme = { version = "2.12.4", optional = true }
arborium-scss = { version = "2.12.4", optional = true }
arborium-solidity = { version = "2.12.4", optional = true }
arborium-sparql = { version = "2.12.4", optional = true }
arborium-sql = { version = "2.12.4", optional = true }
arborium-ssh-config = { version = "2.12.4", optional = true }
arborium-starlark = { version = "2.12.4", optional = true }
arborium-styx = { version = "2.12.4", optional = true }
arborium-svelte = { version = "2.12.4", optional = true }
arborium-swift = { version = "2.12.4", optional = true }
arborium-textproto = { version = "2.12.4", optional = true }
arborium-thrift = { version = "2.12.4", optional = true }
arborium-tlaplus = { version = "2.12.4", optional = true }
arborium-toml = { version = "2.12.4", optional = true }
arborium-tsx = { version = "2.12.4", optional = true }
arborium-typescript = { version = "2.12.4", optional = true }
arborium-typst = { version = "2.12.4", optional = true }
arborium-uiua = { version = "2.12.4", optional = true }
arborium-vb = { version = "2.12.4", optional = true }
arborium-verilog = { version = "2.12.4", optional = true }
arborium-vhdl = { version = "2.12.4", optional = true }
arborium-vim = { version = "2.12.4", optional = true }
arborium-vue = { version = "2.12.4", optional = true }
arborium-wit = { version = "2.12.4", optional = true }
arborium-x86asm = { version = "2.12.4", optional = true }
arborium-xml = { version = "2.12.4", optional = true }
arborium-yaml = { version = "2.12.4", optional = true }
arborium-yuri = { version = "2.12.4", optional = true }
arborium-zig = { version = "2.12.4", optional = true }
arborium-zsh = { version = "2.12.4", optional = true }
# @generated:lang-deps:end

[build-dependencies]
cargo_metadata = "0.23"
plotnik-core.workspace = true
postcard = { version = "1", features = ["alloc"] }
serde = "1"
serde_json = "1"

[dev-dependencies]
